fix: 清理全部 IDE 诊断警告（258 条）
- Eall22/Eall66 命令的 Material switch 补 default 分支（消除 200 条枚举覆盖警告）
- 删除未使用的 import（11 处）、字段（13 处）、局部变量（3 处）和私有方法
- 弃用 API 替换：getMaxHealth→GENERIC_MAX_HEALTH、URL(String)→URI.create、
  getParms→getParameters、GameMode.getByValue→values()、Enchantment.values→
  Registry.ENCHANTMENT、AttributeModifier/HoverEvent 新构造器
- WebServer 反序列化改用 TypeToken 消除 unchecked 警告
- 方法引用改显式 lambda 消除 null safety 警告（6 处）

行为无变化：mvn clean compile BUILD SUCCESS